--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
 .background-style {
   background-color: #67c8dc;
 }
+
+.page-title {
+  text-align: center;
+  font-size: 30px;
+  color: #593706;
+  font-weight: bold;
+}
+
+.project-links a {
+  display: block;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #764707;
+}
