--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 .background-style {
   background-color: #67c8dc;
+  margin: 0;
 }
 
 .page-title {
@@ -14,4 +15,18 @@
   text-align: center;
   margin-bottom: 10px;
   color: #764707;
+}
+
+.navbar {
+  background-color: rgb(16, 83, 97);
+  padding: 20px 20px;
+}
+
+.navbar a {
+  padding: 20px 20px;
+  font-size: 30px;
+}
+
+.navbar a:hover {
+  background-color: azure;
 }
